[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-agent"
version = "0.1.0"
description = "Document processing pipeline with LLM-based extraction and validation"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "pymupdf>=1.24.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
]

[project.scripts]
doc-agent = "doc_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_agent"]
